# axum-lsy

./: Cargo.toml  Secrets.dev.toml  readme.md
assets/js/: lsy.js  lsy.js.map  test.js
db/: data.md  scheme.md
src/: config.rs  controller.rs  layers.rs  main.rs
src/api/: hello_world.rs
src/controller/: auth_controller.rs  index_controller.rs  test_controller.rs
src/layers/: test_layer.rs
templates/: index.html
templates/parts/auth/: emailAuthFailPart.html  emailAuthSuccessPart.html
templates/test/: index.html
templates/test/layout/: defaultLayout.html
templates/test/parts/: test.html
typescript/: package-lock.json  package.json  webpack.config.js
typescript/src/: index.ts
typescript/src/app_interface/: index.ts
typescript/src/pixi/: index.ts
typescript/src/util/: index.ts  mob.ts
