[package]
name = "axum-lsy"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.2"
shuttle-secrets = "0.35.2"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
sqlx = { version = "0.7.3", features = ["macros"] }
shuttle-shared-db = { version = "0.35.2", features = ["postgres"] }
anyhow = "1.0.76"
lazy_static = "1.4.0"
